--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -3,7 +3,7 @@ on:
   issues:
     types: [opened]
 jobs:
-  Issue Opened:
+  Issue_Opened:
     runs-on: ubuntu:latest
     steps:
       - name : Opened Issue
