--- a/.github/workflows/deplyment.yml
+++ b/.github/workflows/deplyment.yml
@@ -29,3 +29,10 @@ jobs:
         run: npm ci
       - name: Run Build
         run: npm run build
+      - name: Upload Artifacts
+        use: actions/upload-artifact@v4
+        with:
+          name: dist-files
+          path: |
+            dist
+            package.json
