Fixed issue by changing use to uses

--- a/.github/workflows/deplyment.yml
+++ b/.github/workflows/deplyment.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run Build
         run: npm run build
       - name: Upload Artifacts
-        use: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: dist-files
           path: |
