--- a/.github/workflows/deplyment.yml
+++ b/.github/workflows/deplyment.yml
@@ -38,7 +38,7 @@ jobs:
             package.json
   Deploy:
     needs: Build
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
       - name: Get Build Artifacts
         uses: actions/download-artifact@v4
