--- a/.github/workflows/deplyment.yml
+++ b/.github/workflows/deplyment.yml
@@ -22,6 +22,8 @@ jobs:
   Build:
     needs: [Test, Lint]
     runs-on: ubuntu-latest
+    ouputs:
+      js-file-name: ${{ steps.push-step.outputs.js-file-name }} 
     steps: 
       - name: Get Code
         uses: actions/checkout@v4
@@ -29,6 +31,9 @@ jobs:
         run: npm ci
       - name: Run Build
         run: npm run build
+      - name: Publish JS filename
+        id: push-step
+        run: find dist/assets/*.js -type f -execdir echo 'js-file-name={}' >> $GITHUB_OUTPUT ';'
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
