--- a/.github/workflows/deplyment.yml
+++ b/.github/workflows/deplyment.yml
@@ -1,5 +1,7 @@
 name: Deplyment Test
 on: [push, workflow_dispatch]
+env:
+  MY_NAME: VIVEK SANGWAN
 jobs:
   Test:
     runs-on: ubuntu-latest
@@ -70,5 +72,7 @@ jobs:
       - name: Output the published file name
         run: echo ${{ needs.Build.outputs.js-file-name }}
       - name: Deploy
-        run: echo "Deploying the application..."
+        run: |
+          echo "Author: $MY_NAME"
+          echo "Deploying the application..."
 
