--- a/.github/workflows/deplyment.yml
+++ b/.github/workflows/deplyment.yml
@@ -62,6 +62,8 @@ jobs:
   Deploy:
     needs: Build
     runs-on: ubuntu-latest
+    env:
+      MONGODB_KEY: ${{ secrets.MONGODB_KEY }}
     steps:
       - name: Get Build Artifacts
         uses: actions/download-artifact@v4
@@ -75,4 +77,4 @@ jobs:
         run: |
           echo "Author: $MY_NAME"
           echo "Deploying the application..."
-
+          echo "Mongodb key: $MONGODB_KEY"
